Add more projects and images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </nav>
 
   <div class="projects">
-    <div class="project">
+    <div class="filter-option" data-filter="game">
       <img
         src="./images/scrapyard.png"
         alt="Brightly colored game board with cards and game money fanned around it"
@@ -41,7 +41,7 @@
         <span class="project-subtitle">(Board Game)</span>
       </h2>
     </div>
-    <div class="project">
+    <div class="filter-option" data-filter="code">
       <img
         src="./images/hello.png"
         alt="Screenshot of website page showing abstract graphics"
@@ -52,7 +52,7 @@
         <span class="project-subtitle">(Net Art)</span>
       </h2>
     </div>
-    <div class="project">
+    <div class="filter-option code">
       <img
         src="./images/wander.png"
         alt="Screenshot of website page showing ASCII art of a flower growing"
@@ -63,15 +63,37 @@
         <span class="project-subtitle">(Net Art)</span>
       </h2>
     </div>
-    <div class="project">
+    <div class="filter-option">
       <img
-        src="./images/hello.png"
-        alt="Screenshot of website page showing abstract graphics"
+        src="./images/unmasked.png"
+        alt="Screenshot of a character in a black robe and wolf mask speaking to another robed figure. A dialog box takes up the bottom half of the screen"
         width="250px"
       />
       <h2 class="project-title">
-        Hello Copy
-        <span class="project-subtitle">(Net Art)</span>
+        The Unmasked
+        <span class="project-subtitle">(Video Game)</span>
+      </h2>
+    </div>
+    <div class="filter-option">
+      <img
+        src="./images/debug.png"
+        alt="Red pixelated text states 'Warning: Data Corruption Found' in all-capital letters"
+        width="250px"
+      />
+      <h2 class="project-title">
+        Debug.Log
+        <span class="project-subtitle">(Video Game)</span>
+      </h2>
+    </div>
+    <div class="filter-option">
+      <img
+        src="./images/david.jpg"
+        alt="A light illuminates a desk in a dark room. A laptop sits open on the desk"
+        width="250px"
+      />
+      <h2 class="project-title">
+        In David's Absence
+        <span class="project-subtitle">(Installation)</span>
       </h2>
     </div>
   </div>
