Add grid and other CSS adjustments

--- a/index.html
+++ b/index.html
@@ -104,13 +104,19 @@
     </div>
   </div>
 
-  <p class="medium-block-space">
-    Or, you can find me elsewhere on the internet:
-  </p>
+  <footer>
+    <p class="medium-block-space">
+      Or, you can find me elsewhere on the internet:
+    </p>
 
-  <a href="#" class="red" rel="noreferrer" target="_blank">GitHub</a>
-  <a href="#" class="yellow" rel="noreferrer" target="_blank">itch.io</a>
-  <a href="#" class="green">Contact Me</a>
+    <div>
+      <a href="#" class="red" rel="noreferrer" target="_blank">GitHub</a>
+    </div>
+    <div>
+      <a href="#" class="yellow" rel="noreferrer" target="_blank">itch.io</a>
+    </div>
+    <div><a href="#" class="green">Contact Me</a></div>
+  </footer>
 
   <script src="index.js"></script>
 </html>
