Stop buttons from jumping scroll to top of the page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
   </body>
 
   <nav class="filters-list large-block-space">
-    <a href="#" class="selected pink" data-filter="code">Code</a>
-    <a href="#" class="yellow" data-filter="game">Games + Play</a>
-    <a href="#" class="blue" data-filter="art">Art</a>
+    <a href="#/" class="selected pink" data-filter="code" role="button">Code</a>
+    <a href="#/" class="yellow" data-filter="game" role="button"
+      >Games + Play</a
+    >
+    <a href="#/" class="blue" data-filter="art" role="button">Art</a>
   </nav>
 
   <div class="projects large-block-space">
