Underline selected option

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </body>
 
   <nav class="filters-list large-block-space">
-    <a href="#/" class="selected pink" data-filter="code" role="button">Code</a>
+    <a href="#/" class="pink selected" data-filter="code" role="button">Code</a>
     <a href="#/" class="yellow" data-filter="game" role="button"
       >Games + Play</a
     >
