Link blank project page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </p>
     <div class="large-block-space">
       <p class="small-block-space">
-        I'm a web developer and artist who loves interactive storytelling. My
-        focus is on front-end development, but I enjoy dipping my toes into any
-        sort of code.
+        I'm a web developer and artist, whose main love is interactive
+        storytelling. My focus is on front-end development, but I enjoy dipping
+        my toes into any sort of code.
       </p>
       <p>
         Currently, I'm an adjunct faculty member at MICA in the game design
@@ -27,98 +27,101 @@
       <!-- If you're here to check out my work, click below: -->
       To check out my work, click below:
     </p>
+    <nav class="filters-list large-block-space">
+      <a href="#/" class="pink selected" data-filter="code" role="button"
+        >Code</a
+      >
+      <a href="#/" class="yellow" data-filter="game" role="button"
+        >Games + Play</a
+      >
+      <a href="#/" class="blue" data-filter="art" role="button">Art</a>
+    </nav>
+
+    <div class="projects large-block-space">
+      <div class="filter-option" data-filter="game">
+        <a href="scrap-yard.html">
+          <img
+            src="./images/scrapyard.png"
+            alt="Brightly colored game board with cards and game money fanned around it"
+            width="250px"
+          />
+          <h2 class="project-title">
+            Scrap Yard
+            <span class="project-subtitle">(Board Game)</span>
+          </h2>
+        </a>
+      </div>
+      <div class="filter-option" data-filter="code art">
+        <img
+          src="./images/hello.png"
+          alt="Screenshot of website page showing abstract graphics"
+          width="250px"
+        />
+        <h2 class="project-title">
+          Hello
+          <span class="project-subtitle">(Net Art)</span>
+        </h2>
+      </div>
+      <div class="filter-option" data-filter="code">
+        <img
+          src="./images/wander.png"
+          alt="Screenshot of website page showing ASCII art of a flower growing"
+          width="250px"
+        />
+        <h2 class="project-title">
+          Wander
+          <span class="project-subtitle">(Net Art)</span>
+        </h2>
+      </div>
+      <div class="filter-option" data-filter="code game">
+        <img
+          src="./images/unmasked.png"
+          alt="Screenshot of a character in a black robe and wolf mask speaking to another robed figure. A dialog box takes up the bottom half of the screen"
+          width="250px"
+        />
+        <h2 class="project-title">
+          The Unmasked
+          <span class="project-subtitle">(Video Game)</span>
+        </h2>
+      </div>
+      <div class="filter-option" data-filter="code game">
+        <img
+          src="./images/debug.png"
+          alt="Red pixelated text states 'Warning: Data Corruption Found' in all-capital letters"
+          width="250px"
+        />
+        <h2 class="project-title">
+          Debug.Log
+          <span class="project-subtitle">(Video Game)</span>
+        </h2>
+      </div>
+      <div class="filter-option" data-filter="game art">
+        <img
+          src="./images/david.jpg"
+          alt="A light illuminates a desk in a dark room. A laptop sits open on the desk"
+          width="250px"
+        />
+        <h2 class="project-title">
+          In David's Absence
+          <span class="project-subtitle">(Installation)</span>
+        </h2>
+      </div>
+    </div>
+
+    <footer>
+      <p class="medium-block-space">
+        Or, you can find me elsewhere on the internet:
+      </p>
+
+      <div>
+        <a href="#" class="red" rel="noreferrer" target="_blank">GitHub</a>
+      </div>
+      <div>
+        <a href="#" class="yellow" rel="noreferrer" target="_blank">itch.io</a>
+      </div>
+      <div><a href="#" class="green">Contact Me</a></div>
+    </footer>
   </body>
-
-  <nav class="filters-list large-block-space">
-    <a href="#/" class="pink selected" data-filter="code" role="button">Code</a>
-    <a href="#/" class="yellow" data-filter="game" role="button"
-      >Games + Play</a
-    >
-    <a href="#/" class="blue" data-filter="art" role="button">Art</a>
-  </nav>
-
-  <div class="projects large-block-space">
-    <div class="filter-option" data-filter="game">
-      <img
-        src="./images/scrapyard.png"
-        alt="Brightly colored game board with cards and game money fanned around it"
-        width="250px"
-      />
-      <h2 class="project-title">
-        Scrap Yard
-        <span class="project-subtitle">(Board Game)</span>
-      </h2>
-    </div>
-    <div class="filter-option" data-filter="code art">
-      <img
-        src="./images/hello.png"
-        alt="Screenshot of website page showing abstract graphics"
-        width="250px"
-      />
-      <h2 class="project-title">
-        Hello
-        <span class="project-subtitle">(Net Art)</span>
-      </h2>
-    </div>
-    <div class="filter-option" data-filter="code">
-      <img
-        src="./images/wander.png"
-        alt="Screenshot of website page showing ASCII art of a flower growing"
-        width="250px"
-      />
-      <h2 class="project-title">
-        Wander
-        <span class="project-subtitle">(Net Art)</span>
-      </h2>
-    </div>
-    <div class="filter-option" data-filter="code game">
-      <img
-        src="./images/unmasked.png"
-        alt="Screenshot of a character in a black robe and wolf mask speaking to another robed figure. A dialog box takes up the bottom half of the screen"
-        width="250px"
-      />
-      <h2 class="project-title">
-        The Unmasked
-        <span class="project-subtitle">(Video Game)</span>
-      </h2>
-    </div>
-    <div class="filter-option" data-filter="code game">
-      <img
-        src="./images/debug.png"
-        alt="Red pixelated text states 'Warning: Data Corruption Found' in all-capital letters"
-        width="250px"
-      />
-      <h2 class="project-title">
-        Debug.Log
-        <span class="project-subtitle">(Video Game)</span>
-      </h2>
-    </div>
-    <div class="filter-option" data-filter="game art">
-      <img
-        src="./images/david.jpg"
-        alt="A light illuminates a desk in a dark room. A laptop sits open on the desk"
-        width="250px"
-      />
-      <h2 class="project-title">
-        In David's Absence
-        <span class="project-subtitle">(Installation)</span>
-      </h2>
-    </div>
-  </div>
-
-  <footer>
-    <p class="medium-block-space">
-      Or, you can find me elsewhere on the internet:
-    </p>
-
-    <div>
-      <a href="#" class="red" rel="noreferrer" target="_blank">GitHub</a>
-    </div>
-    <div>
-      <a href="#" class="yellow" rel="noreferrer" target="_blank">itch.io</a>
-    </div>
-    <div><a href="#" class="green">Contact Me</a></div>
-  </footer>
 
   <script src="index.js"></script>
 </html>
