Move css files and create project page template

--- a/project-template.html
+++ b/project-template.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scrap Yard - Ash Turner</title>
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/project.css" />
+
     <link rel="icon" type="image/png" href="images/star.png" />
   </head>
   <body>
     <a href="index.html" class="back pink">Back to home</a>
-    <h1>Scrap Yard</h1>
-    <h2 class="project-subtitle">Made with: Adobe Photoshop</h2>
+    <h1>Title</h1>
+    <h2 class="project-subtitle">Made with: HTML, CSS, JavaScript</h2>
   </body>
 
   <!-- <script src="index.js"></script> -->
