--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ash Turner</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link rel="icon" type="image/png" href="images/star.png" />
   </head>
   <body>
@@ -39,7 +39,7 @@
 
     <div class="projects large-block-space">
       <div class="filter-option" data-filter="game">
-        <a href="scrap-yard.html">
+        <a href="project-template.html">
           <img
             src="./images/scrapyard.png"
             alt="Brightly colored game board with cards and game money fanned around it"
