Flesh out project styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="#/" class="blue" data-filter="art" role="button">Art</a>
     </nav>
 
-    <div class="projects large-block-space">
+    <div class="projects-container large-block-space">
       <div class="filter-option" data-filter="game">
         <a href="project-template.html">
           <img
