--- a/project-template.html
+++ b/project-template.html
@@ -13,7 +13,54 @@
   <body>
     <a href="index.html" class="back pink">Back to home</a>
     <h1>Title</h1>
-    <h2 class="project-subtitle">Made with: HTML, CSS, JavaScript</h2>
+    <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
+    <img
+      class="main-image"
+      src="images/wander.png"
+      alt="Brightly colored game board with cards and game money fanned around it"
+    />
+    <div class="project-link">
+      Live project:
+      <a
+        href="http://wandering.click/"
+        rel="noreferrer"
+        target="_blank"
+        class="blue"
+        >wandering.click</a
+      >
+    </div>
+    <div class="project-subtitle">(Best viewed on Firefox)</div>
+    <p class="small-block-space">
+      Wander is my love letter to a childhood spent in nature, and an adulthood
+      spent wandering on the internet. It can be read as interactive poetry, or
+      simply explored as a website.
+    </p>
+    <p>
+      This project was my thesis for MICA’s Interactive Arts program. Since it’s
+      inspired by early net art, it uses bare-bones HTML, CSS, and JavaScript.
+    </p>
+    <h2>Web Pages</h2>
+    <div class="gallery-container large-block-space">
+      <img src="images/wander1.png" />
+      <img src="images/wander2.png" />
+      <img src="images/wander3.png" />
+      <img src="images/wander4.png" />
+      <img src="images/wander5.png" />
+      <img src="images/wander6.png" />
+      <img src="images/wander7.png" />
+      <img src="images/wander8.png" />
+      <img src="images/wander9.png" />
+    </div>
+    <h2>Process and Development</h2>
+    <div class="gallery-container large-block-space">
+      <img src="images/wander10.png" />
+      <img src="images/wander11.png" />
+      <img src="images/wander12.png" />
+      <img src="images/wander13.png" />
+      <img src="images/wander14.png" />
+      <img src="images/wander15.png" />
+    </div>
+    <a href="#" class="back pink small-block-space">Back to top</a>
   </body>
 
   <!-- <script src="index.js"></script> -->
