Scroll to top with link click

--- a/project-template.html
+++ b/project-template.html
@@ -60,8 +60,10 @@
       <img src="images/wander14.png" />
       <img src="images/wander15.png" />
     </div>
-    <a href="#" class="back pink small-block-space">Back to top</a>
+    <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
+      Back to top
+    </a>
   </body>
 
-  <!-- <script src="index.js"></script> -->
+  <script src="project.js"></script>
 </html>
