Add open and close of image modal/lightbox

--- a/project-template.html
+++ b/project-template.html
@@ -15,7 +15,7 @@
     <h1>Title</h1>
     <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
     <img
-      class="main-image"
+      class="main-image zoomable"
       src="images/wander.png"
       alt="Brightly colored game board with cards and game money fanned around it"
     />
@@ -41,24 +41,29 @@
     </p>
     <h2>Web Pages</h2>
     <div class="gallery-container large-block-space">
-      <img src="images/wander1.png" />
-      <img src="images/wander2.png" />
-      <img src="images/wander3.png" />
-      <img src="images/wander4.png" />
-      <img src="images/wander5.png" />
-      <img src="images/wander6.png" />
-      <img src="images/wander7.png" />
-      <img src="images/wander8.png" />
-      <img src="images/wander9.png" />
+      <img src="images/wander1.png" class="zoomable" />
+      <img src="images/wander2.png" class="zoomable" />
+      <img src="images/wander3.png" class="zoomable" />
+      <img src="images/wander4.png" class="zoomable" />
+      <img src="images/wander5.png" class="zoomable" />
+      <img src="images/wander6.png" class="zoomable" />
+      <img src="images/wander7.png" class="zoomable" />
+      <img src="images/wander8.png" class="zoomable" />
+      <img src="images/wander9.png" class="zoomable" />
     </div>
     <h2>Process and Development</h2>
     <div class="gallery-container large-block-space">
+      <img src="images/wander10.png" class="zoomable" />
+      <img src="images/wander11.png" class="zoomable" />
+      <img src="images/wander12.png" class="zoomable" />
+      <img src="images/wander13.png" class="zoomable" />
+      <img src="images/wander14.png" class="zoomable" />
+      <img src="images/wander15.png" class="zoomable" />
+    </div>
+    <div class="modal">
+      <span class="close">&times;</span>
       <img src="images/wander10.png" />
-      <img src="images/wander11.png" />
-      <img src="images/wander12.png" />
-      <img src="images/wander13.png" />
-      <img src="images/wander14.png" />
-      <img src="images/wander15.png" />
+      <p>Caption for image</p>
     </div>
     <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
       Back to top
