--- a/project-template.html
+++ b/project-template.html
@@ -63,6 +63,8 @@
     <div class="modal">
       <span class="close">&times;</span>
       <img src="images/wander10.png" />
+      <span class="left-arrow">❮</span>
+      <span class="right-arrow">❯</span>
       <p>Caption for image</p>
     </div>
     <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
