--- a/project-template.html
+++ b/project-template.html
@@ -63,9 +63,8 @@
     <div class="modal">
       <span class="close">&times;</span>
       <img src="images/wander10.png" />
-      <span class="left-arrow">❮</span>
-      <span class="right-arrow">❯</span>
-      <p>Caption for image</p>
+      <div class="left-arrow">❮</span></div>
+      <div class="right-arrow"><span>❯</span></div>
     </div>
     <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
       Back to top
