Escape from lightbox with key press

--- a/project-template.html
+++ b/project-template.html
@@ -11,64 +11,70 @@
     <link rel="icon" type="image/png" href="images/star.png" />
   </head>
   <body>
-    <a href="index.html" class="back pink">Back to home</a>
-    <h1>Title</h1>
-    <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
-    <img
-      class="main-image zoomable"
-      src="images/wander.png"
-      alt="Brightly colored game board with cards and game money fanned around it"
-    />
-    <div class="project-link">
-      Live project:
-      <a
-        href="http://wandering.click/"
-        rel="noreferrer"
-        target="_blank"
-        class="blue"
-        >wandering.click</a
-      >
-    </div>
-    <div class="project-subtitle">(Best viewed on Firefox)</div>
-    <p class="small-block-space">
-      Wander is my love letter to a childhood spent in nature, and an adulthood
-      spent wandering on the internet. It can be read as interactive poetry, or
-      simply explored as a website.
-    </p>
-    <p>
-      This project was my thesis for MICA’s Interactive Arts program. Since it’s
-      inspired by early net art, it uses bare-bones HTML, CSS, and JavaScript.
-    </p>
-    <h2>Web Pages</h2>
-    <div class="gallery-container large-block-space">
-      <img src="images/wander1.png" class="zoomable" />
-      <img src="images/wander2.png" class="zoomable" />
-      <img src="images/wander3.png" class="zoomable" />
-      <img src="images/wander4.png" class="zoomable" />
-      <img src="images/wander5.png" class="zoomable" />
-      <img src="images/wander6.png" class="zoomable" />
-      <img src="images/wander7.png" class="zoomable" />
-      <img src="images/wander8.png" class="zoomable" />
-      <img src="images/wander9.png" class="zoomable" />
-    </div>
-    <h2>Process and Development</h2>
-    <div class="gallery-container large-block-space">
-      <img src="images/wander10.png" class="zoomable" />
-      <img src="images/wander11.png" class="zoomable" />
-      <img src="images/wander12.png" class="zoomable" />
-      <img src="images/wander13.png" class="zoomable" />
-      <img src="images/wander14.png" class="zoomable" />
-      <img src="images/wander15.png" class="zoomable" />
-    </div>
-    <div class="modal">
+    <main>
+      <a href="index.html" class="back pink">Back to home</a>
+      <h1>Title</h1>
+      <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
+      <img
+        class="main-image zoomable"
+        src="images/wander.png"
+        alt="Brightly colored game board with cards and game money fanned around it"
+      />
+      <div class="project-link">
+        Live project:
+        <a
+          href="http://wandering.click/"
+          rel="noreferrer"
+          target="_blank"
+          class="blue"
+        >
+          wandering.click
+        </a>
+      </div>
+      <div class="project-subtitle">(Best viewed on Firefox)</div>
+      <p class="small-block-space">
+        Wander is my love letter to a childhood spent in nature, and an
+        adulthood spent wandering on the internet. It can be read as interactive
+        poetry, or simply explored as a website.
+      </p>
+      <p>
+        This project was my thesis for MICA’s Interactive Arts program. Since
+        it’s inspired by early net art, it uses bare-bones HTML, CSS, and
+        JavaScript.
+      </p>
+      <h2>Web Pages</h2>
+      <div class="gallery-container large-block-space">
+        <img src="images/wander1.png" class="zoomable" />
+        <img src="images/wander2.png" class="zoomable" />
+        <img src="images/wander3.png" class="zoomable" />
+        <img src="images/wander4.png" class="zoomable" />
+        <img src="images/wander5.png" class="zoomable" />
+        <img src="images/wander6.png" class="zoomable" />
+        <img src="images/wander7.png" class="zoomable" />
+        <img src="images/wander8.png" class="zoomable" />
+        <img src="images/wander9.png" class="zoomable" />
+      </div>
+      <h2>Process and Development</h2>
+      <div class="gallery-container large-block-space">
+        <img src="images/wander10.png" class="zoomable" />
+        <img src="images/wander11.png" class="zoomable" />
+        <img src="images/wander12.png" class="zoomable" />
+        <img src="images/wander13.png" class="zoomable" />
+        <img src="images/wander14.png" class="zoomable" />
+        <img src="images/wander15.png" class="zoomable" />
+      </div>
+
+      <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
+        Back to top
+      </a>
+    </main>
+
+    <div class="modal" tabindex="0">
       <span class="close">&times;</span>
       <img src="images/wander10.png" />
-      <div class="left-arrow">❮</span></div>
+      <div class="left-arrow"><span>❮</span></div>
       <div class="right-arrow"><span>❯</span></div>
     </div>
-    <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
-      Back to top
-    </a>
   </body>
 
   <script src="project.js"></script>
