Style for improved accessibility

--- a/index.html
+++ b/index.html
@@ -29,13 +29,30 @@
         To check out my work, click below:
       </p>
       <nav class="filters-list large-block-space">
-        <a href="#/" class="pink selected" data-filter="code" role="button"
+        <a
+          href="#/"
+          class="pink selected"
+          data-filter="code"
+          role="button"
+          aria-label="Filter projects by: Code"
           >Code</a
         >
-        <a href="#/" class="yellow" data-filter="game" role="button"
+        <a
+          href="#/"
+          class="yellow"
+          data-filter="game"
+          role="button"
+          aria-label="Filter projects by: Games and Play"
           >Games + Play</a
         >
-        <a href="#/" class="blue" data-filter="art" role="button">Art</a>
+        <a
+          href="#/"
+          class="blue"
+          data-filter="art"
+          role="button"
+          aria-label="Filter projects by: Art"
+          >Art</a
+        >
       </nav>
 
       <div class="projects-container large-block-space">
