--- a/project-template.html
+++ b/project-template.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="images/star.png" />
   </head>
   <body>
-    <main>
+    <div id="main-page">
       <a href="index.html" class="back pink">Back to home</a>
       <h1>Title</h1>
       <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
@@ -44,7 +44,9 @@
       </p>
       <h2>Web Pages</h2>
       <div class="gallery-container large-block-space">
-        <img src="images/wander1.png" class="zoomable" />
+        <a href="#">
+          <img src="images/wander1.png" class="zoomable" />
+        </a>
         <img src="images/wander2.png" class="zoomable" />
         <img src="images/wander3.png" class="zoomable" />
         <img src="images/wander4.png" class="zoomable" />
@@ -67,13 +69,13 @@
       <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
         Back to top
       </a>
-    </main>
+    </div>
 
-    <div class="modal" tabindex="0">
-      <span class="close">&times;</span>
+    <div class="modal" tabindex="0" role="dialog">
+      <button class="close">&times;</button>
       <img src="images/wander10.png" />
-      <div class="left-arrow"><span>❮</span></div>
-      <div class="right-arrow"><span>❯</span></div>
+      <button class="left-arrow"><span>❮</span></button>
+      <button class="right-arrow"><span>❯</span></button>
     </div>
   </body>
 
