Make thumbnails pull up clicked image

--- a/project-template.html
+++ b/project-template.html
@@ -44,9 +44,7 @@
       </p>
       <h2>Web Pages</h2>
       <div class="gallery-container large-block-space">
-        <a href="#">
-          <img src="images/wander1.png" class="zoomable" />
-        </a>
+        <img src="images/wander1.png" class="zoomable" />
         <img src="images/wander2.png" class="zoomable" />
         <img src="images/wander3.png" class="zoomable" />
         <img src="images/wander4.png" class="zoomable" />
@@ -73,7 +71,54 @@
 
     <div class="modal" tabindex="0" role="dialog">
       <button class="close">&times;</button>
-      <img src="images/wander10.png" />
+      <div class="slide">
+        <img src="images/wander.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander1.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander2.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander3.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander4.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander5.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander6.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander7.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander8.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander9.png" />
+      </div>
+      <div class="slide">
+        <img src="images/wander10.png" class="zoomable" />
+      </div>
+      <div class="slide">
+        <img src="images/wander11.png" class="zoomable" />
+      </div>
+      <div class="slide">
+        <img src="images/wander12.png" class="zoomable" />
+      </div>
+      <div class="slide">
+        <img src="images/wander13.png" class="zoomable" />
+      </div>
+      <div class="slide">
+        <img src="images/wander14.png" class="zoomable" />
+      </div>
+      <div class="slide">
+        <img src="images/wander15.png" class="zoomable" />
+      </div>
       <button class="left-arrow"><span>❮</span></button>
       <button class="right-arrow"><span>❯</span></button>
     </div>
