Remove unnecessary class

--- a/project-template.html
+++ b/project-template.html
@@ -102,22 +102,22 @@
         <img src="images/wander9.png" />
       </div>
       <div class="slide">
-        <img src="images/wander10.png" class="zoomable" />
+        <img src="images/wander10.png" />
       </div>
       <div class="slide">
-        <img src="images/wander11.png" class="zoomable" />
+        <img src="images/wander11.png" />
       </div>
       <div class="slide">
-        <img src="images/wander12.png" class="zoomable" />
+        <img src="images/wander12.png" />
       </div>
       <div class="slide">
-        <img src="images/wander13.png" class="zoomable" />
+        <img src="images/wander13.png" />
       </div>
       <div class="slide">
-        <img src="images/wander14.png" class="zoomable" />
+        <img src="images/wander14.png" />
       </div>
       <div class="slide">
-        <img src="images/wander15.png" class="zoomable" />
+        <img src="images/wander15.png" />
       </div>
       <button class="left-arrow"><span>❮</span></button>
       <button class="right-arrow"><span>❯</span></button>
