Add screenreader text for outgoing links

--- a/index.html
+++ b/index.html
@@ -132,11 +132,17 @@
         </p>
 
         <div>
-          <a href="#" class="red" rel="noreferrer" target="_blank">GitHub</a>
+          <a href="#" class="red" rel="noreferrer" target="_blank"
+            >GitHub<span class="screenreader-text">
+              (Link opens in a new tab)</span
+            ></a
+          >
         </div>
         <div>
           <a href="#" class="yellow" rel="noreferrer" target="_blank"
-            >itch.io</a
+            >itch.io<span class="screenreader-text">
+              (Link opens in a new tab)</span
+            ></a
           >
         </div>
         <div><a href="#" class="green">Contact Me</a></div>
