--- a/project-template.html
+++ b/project-template.html
@@ -28,8 +28,10 @@
           target="_blank"
           class="blue"
         >
-          wandering.click
-        </a>
+          wandering.click<span class="screenreader-text">
+            (Link opens in a new tab)</span
+          ></a
+        >
       </div>
       <div class="project-subtitle">(Best viewed on Firefox)</div>
       <p class="small-block-space">
