--- a/project-template.html
+++ b/project-template.html
@@ -46,24 +46,114 @@
       </p>
       <h2>Web Pages</h2>
       <div class="gallery-container large-block-space">
-        <img src="images/wander1.png" class="zoomable" />
-        <img src="images/wander2.png" class="zoomable" />
-        <img src="images/wander3.png" class="zoomable" />
-        <img src="images/wander4.png" class="zoomable" />
-        <img src="images/wander5.png" class="zoomable" />
-        <img src="images/wander6.png" class="zoomable" />
-        <img src="images/wander7.png" class="zoomable" />
-        <img src="images/wander8.png" class="zoomable" />
-        <img src="images/wander9.png" class="zoomable" />
+        <button>
+          <img
+            src="images/wander1.png"
+            class="zoomable"
+            alt="View full size version of a screenshot of ASCII flowers growing"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander2.png"
+            class="zoomable"
+            alt="View full size version of a screenshot of ASCII landscape, with hills underneath a sun"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander3.png"
+            class="zoomable"
+            alt="View full size version of a screenshot of poetic text on webpage"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander4.png"
+            class="zoomable"
+            alt="View full size version of a screenshot of ASCII tree and text input on webpage"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander5.png"
+            class="zoomable"
+            alt="View full size version of a screenshot of ASCII clouds"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander6.png"
+            class="zoomable"
+            alt="View full size version of a screenshot of a square of ASCII grass"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander7.png"
+            class="zoomable"
+            alt="View full size version of screenshot of white stars on black background"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander8.png"
+            class="zoomable"
+            alt="View full size version of screenshot of three ASCII trees growing out of the ground"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander9.png"
+            class="zoomable"
+            alt="View full size version of screenshot of white ASCII flowers growing on a black background"
+          />
+        </button>
       </div>
       <h2>Process and Development</h2>
       <div class="gallery-container large-block-space">
-        <img src="images/wander10.png" class="zoomable" />
-        <img src="images/wander11.png" class="zoomable" />
-        <img src="images/wander12.png" class="zoomable" />
-        <img src="images/wander13.png" class="zoomable" />
-        <img src="images/wander14.png" class="zoomable" />
-        <img src="images/wander15.png" class="zoomable" />
+        <button>
+          <img
+            src="images/wander10.png"
+            class="zoomable"
+            alt="View full size version of screenshot of two lines of text"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander11.png"
+            class="zoomable"
+            alt="View full size version of screenshot of two lines of text"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander12.png"
+            class="zoomable"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of stars and clouds"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander13.png"
+            class="zoomable"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of hills"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander14.png"
+            class="zoomable"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of growing flowers and clouds"
+          />
+        </button>
+        <button>
+          <img
+            src="images/wander15.png"
+            class="zoomable"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of treetops"
+          />
+        </button>
       </div>
 
       <a href="#" class="back pink small-block-space" onclick="scrollToTop()">
@@ -71,7 +161,8 @@
       </a>
     </div>
 
-    <div class="modal" tabindex="0" role="dialog">
+    <div class="modal" role="dialog">
+      <!--Do I need tabindex="0" for modal accessibility?-->
       <button class="close">&times;</button>
       <div class="slide">
         <img src="images/wander.png" />
