Add outgoing links

--- a/index.html
+++ b/index.html
@@ -132,14 +132,22 @@
         </p>
 
         <div>
-          <a href="#" class="red" rel="noreferrer" target="_blank"
+          <a
+            href="https://github.com/gojanedoe"
+            class="red"
+            rel="noreferrer"
+            target="_blank"
             >GitHub<span class="screenreader-text">
               (Link opens in a new tab)</span
             ></a
           >
         </div>
         <div>
-          <a href="#" class="yellow" rel="noreferrer" target="_blank"
+          <a
+            href="https://ashturn.itch.io/"
+            class="yellow"
+            rel="noreferrer"
+            target="_blank"
             >itch.io<span class="screenreader-text">
               (Link opens in a new tab)</span
             ></a
